...
          child: Text(context.translate('Cancel')),
          onPressed: () {
            Navigator.of(context).pop(false);
          },
        ),
        TextButton(
          key: const Key('btn_ok'),
          child: Text(context.translate('OK')),
          onPressed: () {
            Navigator.of(context).pop(true);
          },
        ),
      ],
...
