...
        return <PopupMenuEntry<PlusMenuIndexes>>[
          PopupMenuItem<PlusMenuIndexes>(
            value: PlusMenuIndexes.addDevice,
            child: _NewDevicesBadge(child: Text(context.translate('Add New Devices'))),
          ),
          PopupMenuItem<PlusMenuIndexes>(
            key: const Key('menu_item_add_group'),
            value: PlusMenuIndexes.addGroup,
            child: Text(context.translate('Add Devices Group')),
          ),
        ];
      },
    );
...
