...
          );
        } else {
          return Scaffold(
            body: CustomScrollView(
              slivers: [
                SliverAppBar(
                  title: Text(context.translate('Scenes')),
                  actions: [IconButton(icon: Icon(Icons.add_outlined), onPressed: () => _showNewSceneScreen(context))],
                ),
                SceneList(),
                RoutineList(),
              ],
            ),
...
