...
    assert(isInitialized);
    return await _db.transaction((tx) async {
      final store = stringMapStoreFactory.store(StoreNames.scenes);
      final records = await store.find(tx);

      if (records.isEmpty) {
        throw KeyNotFoundException(message: 'No scenes found');
      }

      SceneEntity? lastAccessed;
      int lastAccessEpoch = -1;

      for (final record in records) {
...
