...
            if (index != tabIndex.index) {
              mainVM.setIndex(TabIndices.values[index]);
            }
          },
          items: [
            BottomNavigationBarItem(icon: Icon(Icons.house_outlined), label: context.translate('Scenes')),
            BottomNavigationBarItem(icon: Icon(Icons.device_hub), label: context.translate('Devices')),
            BottomNavigationBarItem(icon: Icon(Icons.person), label: context.translate('My')),
          ],
        ),
      ),
    );
  }
...
