...
                                  Icons.media_bluetooth_off,
                                  size: 64,
                                  color: Theme.of(context).colorScheme.outline.withValues(alpha: 0.38),
                                ),
                                const SizedBox(height: 16),
                                Text(
                                  context.translate('No devices found'),
                                  style: Theme.of(
                                    context,
                                  ).textTheme.bodyLarge?.copyWith(color: Theme.of(context).colorScheme.outline),
                                ),
                              ],
                            ),
...
